--- a/SalaryCalculator_Elvis.csproj
+++ b/SalaryCalculator_Elvis.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MPK_Calendar">
+      <HintPath>E:\Programming\MPK_Calendar\bin\Release\MPK_Calendar.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,6 +49,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Calendar_test.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Calendar_test.Designer.cs">
+      <DependentUpon>Calendar_test.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -63,6 +72,9 @@
     <Compile Include="SaveCalendar.cs">
       <SubType>Form</SubType>
     </Compile>
+    <EmbeddedResource Include="Calendar_test.resx">
+      <DependentUpon>Calendar_test.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
     </EmbeddedResource>
